# abacus-develop

./: .editorconfig  CMakeLists.txt  README.md
.github/workflows/: test.yml
docs/: input-main.md
examples/02d_Si_diamond_lcao_dos/: step1.sh
examples/02e_Cu_lcao_scf/: INPUT
examples/02f_ZnO_lcao_scf/: INPUT
examples/03a_Sn64_lcao_md/: INPUT
examples/H2O-deepks-lcao/: INPUT
examples/H2O-deepks-pw/: INPUT
examples/example_so/: INPUT
examples/hse-Si-example/: INPUT
examples/soc-GaAs-example/: INPUT  INPUT-nscf  INPUT-scf
examples/stress-Si-example/: INPUT
source/: CMakeLists.txt  Makefile  Makefile.Objects  abacus_parameters.cpp  abacus_parameters.h  driver.cpp  input.cpp  input.h  input_conv.cpp  input_update.cpp
source/module_base/: Makefile  enzyme_example.cpp  global_variable.cpp  global_variable.h  sph_bessel.cpp
source/module_esolver/: esolver.cpp  (+15 more)
source/module_esolver/opt/test/: CG_test.cpp  CMakeLists.txt  Makefile  TN_test.cpp  test_tools.cpp
source/module_input/: CMakeLists.txt  read_txt_input-berry.cpp  read_txt_input-deepks.cpp  read_txt_input-dftu.cpp  read_txt_input-efield.cpp  read_txt_input-exx.cpp  read_txt_input-general.cpp  read_txt_input-ipath.cpp  read_txt_input-lcao.cpp  read_txt_input-md.cpp  read_txt_input-print.cpp  read_txt_input-pw.cpp  read_txt_input-relax.cpp  read_txt_input-scf.cpp  read_txt_input-tddft.cpp  read_txt_input-test.cpp  read_txt_input-vdw.cpp  read_txt_input_list.cpp  read_txt_input_list.h  read_txt_input_process.cpp  read_txt_input_value.cpp
source/module_input/test/: CMakeLists.txt  test_item.cpp
(+227 files in other folders)
